Update pneumonia prediction

--- a/Machine Learning Models/Projects/XRay_PneumoniaPrediction.ipynb
+++ b/Machine Learning Models/Projects/XRay_PneumoniaPrediction.ipynb
@@ -9589,7 +9589,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Accuracy – Percent of correct predictions, Recall – Percent of positive (Pneumonia) predictions we were able to catch, Precision – Percent of correct positive predictions, F1-Score – Test accuracy."
+    "Loss: Loss function tells how good our model is in predictions & it is minimum if predictions are closer to the actual values, Binary cross entropy used compares each of the predicted probabilities to actual class output which can be either 0 or 1, calculates the score that penalizes the probabilities based on the distance from the expected value, Accuracy – Percent of correct predictions, Recall – Percent of positive (Pneumonia) predictions we were able to catch, Precision – Percent of correct positive predictions, F1-Score – Test accuracy."
    ]
   },
   {
